--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DoAnCoSo3</string>
+    <string name="app_name">Market</string>
     <string name="trangchu">Trang Chủ</string>
     <string name="danhmuc">Danh Mục</string>
     <string name="chitietsanpham">Chi Tiết Sản Phẩm</string>
